syntax = "proto3";

option go_package = "golang-sample-with-grpc-server-streaming/proto";

package notification;

service NotificationService {
  rpc GetNotifications(NotificationRequest) returns (stream Notification) {}
}

message NotificationRequest {
  string user_id = 1;
}

message Notification {
  string user_id = 1;
  string content = 2;
  int64 created_at = 3;
}